# xarray-ecmwf

./: .cruft.json  .gitignore  Dockerfile  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: on-push.yml
ci/: environment-ci.yml  environment-integration.yml
docs/: conf.py  index.md
notebooks/: ecmwf-opendata-forecast-oper.ipynb  reanalysis-era5-land.ipynb  reanalysis-era5-pressure-levels-reanalysis.ipynb  reanalysis-era5-single-levels-ensemble-members.ipynb  reanalysis-era5-single-levels.ipynb  seasonal-original-single-levels.ipynb
tests/: integration_test_00.py  integration_test_10_cds_era5.py  integration_test_10_cds_era5_reanalysis.py  integration_test_10_cdsapi_era5_reanalysis.py  integration_test_10_cdsapi_era5_reanalysis_date.py  integration_test_10_ecmwf_opendata_oper.py  integration_test_20_cds_era5_ensemble_members.py  integration_test_20_cdsapi_era5_ensemble_members.py  integration_test_30_cdsapi_era5_levels_ensemble_members.py  integration_test_40_cdsapi_seasonal_ecmwf.py  integration_test_40_ecmwf_opendata_oper.py  integration_test_50_ecmwf_opendata_enfo.py  test_00_version.py  test_10_client_common.py  test_30_backend.py  test_50_xarray.py
xarray_ecmwf/: __init__.py  client_cdsapi.py  client_common.py  client_ecmwf_opendata.py  client_polytope.py  client_protocol.py  engine_ecmwf.py
