[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering"
]
dependencies = ["cdsapi", "cfgrib", "xarray"]
description = "Xarray backend to access data via the cdsapi package"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "xarray-ecmwf"
readme = "README.md"

[project.entry-points."xarray.backends"]
ecmwf = "xarray_ecmwf.engine_ecmwf:ECMWFBackendEntrypoint"

[tool.coverage.run]
branch = true

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["cdsapi", "cf2cdm"]

[tool.ruff]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1",
  # pydocstyle: numpy convention
  "D107",
  "D203",
  "D212",
  "D213",
  "D402",
  "D413",
  "D415",
  "D416",
  "D417"
]
# Black line length is 88, but black does not format comments.
line-length = 110
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.setuptools]
packages = ["xarray_ecmwf"]

[tool.setuptools_scm]
write_to = "xarray_ecmwf/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
