[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering"
]
dependencies = ["cdsapi", "cfgrib", "polytope-client", "xarray"]
description = "Xarray backend to access data via the cdsapi package"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "xarray-ecmwf"
readme = "README.md"

[project.entry-points."xarray.backends"]
ecmwf = "xarray_ecmwf.engine_ecmwf:ECMWFBackendEntrypoint"

[tool.coverage.run]
branch = true

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "cdsapi",
  "cf2cdm",
  "ecmwf",
  "ecmwf.opendata",
  "polytope",
  "polytope.api"
]

[tool.ruff]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1"
]
# Same as Black.
indent-width = 4
line-length = 88
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 110

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["xarray_ecmwf"]

[tool.setuptools_scm]
write_to = "xarray_ecmwf/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
